--- a/contact/index.html
+++ b/contact/index.html
@@ -11,4 +11,4 @@
 <script src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7946.308513203729!2d100.48114753448746!3d5.238450000000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304ab79101eb5f1f%3A0xdf352d232f26eba7!2sHong%20Lun%20Sdn%20Bhd!5e0!3m2!1sen!2smy!4v1646904951212!5m2!1sen!2smy"></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin=anonymous referrerpolicy=no-referrer></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ==" crossorigin=anonymous referrerpolicy=no-referrer></script>
-<script src=/js/script.js></script></body></html>
+<script src=/js/script.js async></script></body></html>
